# ratmoseq_tutorial

./: LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 00_introduction.ipynb  01_extraction.ipynb  02_pca.ipynb  03_model_fitting.ipynb
