[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rms_tutorial"
version = "0.0.1"
description = "A tutorial housing documents and code for how to run the entire Rat MoSeq suite"
authors = [
  { name = "Jack Ransom Lovell" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rms_tutorial"]
force_sort_within_sections = true
